--- a/service/service-edu/src/main/resources/application.properties
+++ b/service/service-edu/src/main/resources/application.properties
@@ -9,5 +9,10 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/guli?serverTimezone=GMT%2B8
 spring.datasource.username=root
 spring.datasource.password=12345678
+
+#\u8FD4\u56DEjson\u7684\u5168\u5C40\u65F6\u95F4\u683C\u5F0F
+spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
+spring.jackson.time-zone=GMT+8
+
 # mybatis\u65E5\u5FD7
 mybatis-plus.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
