--- a/service/pom.xml
+++ b/service/pom.xml
@@ -22,6 +22,11 @@
 
     <dependencies>
         <dependency>
+            <artifactId>service-bas</artifactId>
+            <groupId>com.hbl</groupId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-netflix-ribbon</artifactId>
         </dependency>
