--- a/common/pom.xml
+++ b/common/pom.xml
@@ -13,6 +13,7 @@
     <packaging>pom</packaging>
     <modules>
         <module>service-bas</module>
+        <module>common-utils</module>
     </modules>
 
     <properties>
