--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,7 @@
         <canal.client.version>1.1.0</canal.client.version>
         <docker.image.prefix>zx</docker.image.prefix>
         <cloud-alibaba.version>0.2.2.RELEASE</cloud-alibaba.version>
+        <hutools.version>5.7.18</hutools.version>
     </properties>
 
     <!--依赖管理-->
@@ -200,6 +201,11 @@
                 <groupId>com.alibaba.otter</groupId>
                 <artifactId>canal.client</artifactId>
                 <version>${canal.client.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>cn.hutool</groupId>
+                <artifactId>hutool-all</artifactId>
+                <version>${hutools.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
