--- a/common/service-bas/pom.xml
+++ b/common/service-bas/pom.xml
@@ -15,5 +15,13 @@
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
     </properties>
+    <dependencies>
+        <dependency>
+            <groupId>com.hbl</groupId>
+            <version>0.0.1-SNAPSHOT</version>
+            <artifactId>common-utils</artifactId>
+        </dependency>
+
+    </dependencies>
 
 </project>
