--- a/service/service-edu/src/main/resources/application.properties
+++ b/service/service-edu/src/main/resources/application.properties
@@ -14,5 +14,8 @@ spring.datasource.password=12345678
 spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
 spring.jackson.time-zone=GMT+8
 
+# \u8BBE\u7F6E\u65E5\u5FD7\u7EA7\u522B
+#logging.level.root=WARN
 # mybatis\u65E5\u5FD7
-mybatis-plus.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
+#mybatis-plus.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
+
